写的好看点

--- a/获取交易对.md
+++ b/获取交易对.md
@@ -50,7 +50,7 @@
 | market | string    | 市场 |
 | groupId | int    | 分类（1=主流区，2=创新区） |
 | price | float     | 最后成交价格 |
-| rate | float     | 涨幅(24小时) |
+| rate | float     | 24小时涨幅 |
 | high | float     | 24小时最高价 |
 | low | float     | 24小时最低价 |
 | coinVol | float     | 24小时成交量 |
