--- a/获取行情.md
+++ b/获取行情.md
@@ -41,7 +41,7 @@
 | makret | String     | 市场 |
 | high | float     | 24小时最高价 |
 | moneyVol | float     | 24小时成交金额 |
-| rate | float     | 涨幅 |
+| rate | float     | 24小时涨幅 |
 | low | float     | 24小时最低价 |
 | price | float     | 最后成交价格 |
 | ask | float     | 卖一价 |
