更新文档，签名等。详细

--- a/下单.md
+++ b/下单.md
@@ -1,17 +1,19 @@
-### 1.6 `order` 委托下单
-
-/api/v1/order
+### 2.1 `order` 下单
 
 **描述**：
 
 此接口用来委托下单
+
+**请求URL：** 
+- ` https://tradeapi.bb.vip/api/v1/order `
+
 
 **请求参数**
 
 
 | 参数名          | 类型     | 是否必须 | 描述   |
 | :----------- | :----- | :--- | :--- |
-| accessKey | String | 是    | AccessKey |
+| accesskey | String | 是    | AccessKey |
 | number | float | 是    | 数量 |
 | market | String | 是    | 市场 |
 | nonce | long | 是    | 时间戳 |
