--- a/获取资产.md
+++ b/获取资产.md
@@ -15,13 +15,8 @@
 | nonce | long | 是    | 时间戳(unix microsecod) |
 | singnature | String | 是    | 签名后的字符串 |
 
-```
-singnature =  hanacSha256(参数字符串)
-如下
-singnature = hamacSha256('accessKey=' + yourAccessKey + '&nonce=' + 1559553735814)
-```
 返回结果**
-
+理论上是这样：
 ```
 {
 	"code": 200,
@@ -32,6 +27,14 @@ singnature = hamacSha256('accessKey=' + yourAccessKey + '&nonce=' + 155955373581
 		}
 	},
 	"info": "成功"
+}
+```
+
+实际结果：
+```
+{
+    "code": 404,
+    "info": "请稍后再试"
 }
 ```
 
