--- a/下单.md
+++ b/下单.md
@@ -1,27 +1,38 @@
-### 2.1 `order` 下单
+### 下单
 
-**描述**：
+**描述：**
 
 此接口用来委托下单
 
 **请求URL：** 
-- ` https://tradeapi.bb.vip/api/v1/order `
+- ` https://tradeapi.bb.vip/api/open/v1/orders `
 
+**请求方式：**
+- POST
 
-**请求参数**
+**Header：**
 
+```
+Authorization:4ptxZomBV0q4vjFbJT3l7LOeDJo=
+```
+
+**Header参数：**
+| 参数名          | 类型     | 是否必须 | 描述   |
+| :----------- | :----- | :--- | :--- |
+| Authorization | String | 是    | 28位的base64编码 |
+
+**Body请求参数：**
 
 | 参数名          | 类型     | 是否必须 | 描述   |
 | :----------- | :----- | :--- | :--- |
 | accesskey | String | 是    | AccessKey |
 | number | float | 是    | 数量 |
 | market | String | 是    | 市场 |
-| nonce | long | 是    | 时间戳 |
+| time | long | 是    | 时间戳 |
 | price | float | 是    | 价格 |
 | type | int | 是    | 买单0或卖单1 |
-| singnature | String | 是    | 签名后的字符串 |
 
-**返回结果**
+**返回结果：**
 
 ```
 {
@@ -33,7 +44,7 @@
 }
 ```
 
-**返回参数**
+**返回参数：**
 
 | 参数名          | 类型   | 描述   |
 | :----------- |  :--- | :--- |
