--- a/获取历史成交数据.md
+++ b/获取历史成交数据.md
@@ -1,3 +1,8 @@
+### 获取历史成交数据
+
+**描述**：
+
+此接口用来获取交易对历史成交记录
 
 
 **请求URL：** 
@@ -11,7 +16,7 @@
 |参数名|必选|类型|说明|
 |:----    |:---|:----- |-----   |
 |market |  是  |    string   |    市场(目前开放的市场有btc_usdt，eth_usdt，等查看官网公告)   |
-|since  |  否  |    int |  时间戳毫秒级 |
+|since  |  否  |    long |  时间戳毫秒级 |
 
 **返回示例**
 
