--- a/获取资产.md
+++ b/获取资产.md
@@ -1,22 +1,35 @@
-### 1.5 `getBalance` 获取用户资产
+### 获取用户资产
 
-/api/v1/getBalance
+**描述：**
 
-**描述**：
+此接口用来查看用户的资产
 
-此接口用来获取用户资产数据
+**请求URL：** 
+- ` https://tradeapi.bb.vip/api/open/v1/balances `
+  
+**请求方式：**
+- GET
 
-**请求参数**
+**Header：**
 
+```
+Authorization:4ptxZomBV0q4vjFbJT3l7LOeDJo=
+```
+
+**Header参数：**
+| 参数名          | 类型     | 是否必须 | 描述   |
+| :----------- | :----- | :--- | :--- |
+| Authorization | String | 是    | 28位的base64编码 |
+
+**Query参数：**
 
 | 参数名          | 类型     | 是否必须 | 描述   |
 | :----------- | :----- | :--- | :--- |
-| accessKey | String | 是    | AccessKey |
-| nonce | long | 是    | 时间戳(unix microsecod) |
-| singnature | String | 是    | 签名后的字符串 |
+| accesskey | String | 是    | AccessKey |
+| time | long | 是    | 毫秒级时间戳 |
 
-返回结果**
-理论上是这样：
+
+返回结果：**
 ```
 {
 	"code": 200,
@@ -30,15 +43,7 @@
 }
 ```
 
-实际结果：
-```
-{
-    "code": 404,
-    "info": "请稍后再试"
-}
-```
-
-**返回参数**
+**返回参数：**
 
 | 参数名          | 类型   | 描述   |
 | :----------- |  :--- | :--- |
