--- a/下单的查询（委托单）.md
+++ b/下单的查询（委托单）.md
@@ -1,21 +1,34 @@
+### 下单的查询（委托单）
 
-### 1.7 `getOrder` 获取委托信息
-
-/api/v1/getOrder
-
-**描述**：
+**描述：**
 
 此接口用来获取委托详细信息
 
-**请求参数**
+**请求URL：** 
+- ` https://tradeapi.bb.vip/api/open/v1/orders `
 
+**请求方式：**
+- GET
+
+**Header：**
+
+```
+Authorization:4ptxZomBV0q4vjFbJT3l7LOeDJo=
+```
+
+**Header参数：**
+| 参数名          | 类型     | 是否必须 | 描述   |
+| :----------- | :----- | :--- | :--- |
+| Authorization | String | 是    | 28位的base64编码 |
+
+
+**Query参数：**
 
 | 参数名          | 类型     | 是否必须 | 描述   |
 | :----------- | :----- | :--- | :--- |
 | accessKey | String | 是    | AccessKey |
 | market | String | 是    | 市场 |
 | id | long | 是    | 委托ID |
-| singnature | String | 是    | 签名后的字符串 |
 
 **返回结果**
 
