改名，按顺序来

--- a/2.6 获取充值地址.md
+++ b/2.6 获取充值地址.md
@@ -1,10 +1,10 @@
-### 2.0 `getPayinRecord` 获取充值记录
+### 获取充值地址
 
-/api/v1/getPayinRecord
+/api/v1/getPayInAddress
 
 **描述**：
 
-此接口用来获取充值记录
+此接口用来获取充值地址
 
 **请求参数**
 
@@ -33,10 +33,6 @@
 
 | 参数名          | 类型   | 描述   |
 | :----------- |  :--- | :--- |
-| amount | float     | 充值数量 |
-| txHash | String     | Hash |
-| address | String     | 地址 |
-| creatTime | long     | 创建时间 |
-| manageTime | long     | 确认时间 |
-| depth | String     | 确认次数 |
-| status | String     | 充值状态（1失败，2成功） |
+| address | String     | 充值地址 |
+| memo | String     | 标签 |
+| coin | String     | 币种 |
