--- a/2.7 获取充值记录.md
+++ b/2.7 获取充值记录.md
@@ -1,10 +1,10 @@
-### 2.1 `getPayOutRecord` 获取提现记录
+### 获取充值记录
 
-/api/v1/getPayOutRecord
+/api/v1/getPayinRecord
 
 **描述**：
 
-此接口用来获取提现记录
+此接口用来获取充值记录
 
 **请求参数**
 
@@ -33,10 +33,10 @@
 
 | 参数名          | 类型   | 描述   |
 | :----------- |  :--- | :--- |
-| amount | float     | 提现数量 |
+| amount | float     | 充值数量 |
 | txHash | String     | Hash |
 | address | String     | 地址 |
-| fee | float     | 手续费 |
 | creatTime | long     | 创建时间 |
 | manageTime | long     | 确认时间 |
-| status | String     | 充值状态（0提交，1失败，2成功，3取消，4审核中，5待确认，6已经确认） |
+| depth | String     | 确认次数 |
+| status | String     | 充值状态（1失败，2成功） |
