--- a/2.9 获取提现记录.md
+++ b/2.9 获取提现记录.md
@@ -1,10 +1,10 @@
-### 1.10 `getPayInAddress` 获取充值地址
+### 获取提现记录
 
-/api/v1/getPayInAddress
+/api/v1/getPayOutRecord
 
 **描述**：
 
-此接口用来获取充值地址
+此接口用来获取提现记录
 
 **请求参数**
 
@@ -33,6 +33,10 @@
 
 | 参数名          | 类型   | 描述   |
 | :----------- |  :--- | :--- |
-| address | String     | 充值地址 |
-| memo | String     | 标签 |
-| coin | String     | 币种 |
+| amount | float     | 提现数量 |
+| txHash | String     | Hash |
+| address | String     | 地址 |
+| fee | float     | 手续费 |
+| creatTime | long     | 创建时间 |
+| manageTime | long     | 确认时间 |
+| status | String     | 充值状态（0提交，1失败，2成功，3取消，4审核中，5待确认，6已经确认） |
