--- a/2.10 提现.md
+++ b/2.10 提现.md
@@ -1,11 +1,11 @@
+### 提现
 
-### 1.9 `cancel` 取消委托
-
-/api/v1/cancel
+/api/v1/withdraw
 
 **描述**：
 
-此接口用来取消委托
+此接口用来提现
+
 
 **请求参数**
 
@@ -13,8 +13,11 @@
 | 参数名          | 类型     | 是否必须 | 描述   |
 | :----------- | :----- | :--- | :--- |
 | accessKey | String | 是    | AccessKey |
-| market | String | 是    | 市场 |
-| id | long | 是    | 订单ID |
+| coin | String | 是    | 币种 |
+| address | String | 是    | 提现地址 |
+| safePwd | String | 是    | 安全密码 |
+| meno | String | 是    | 标签 |
+| coin | String | 是    | 币种 |
 | singnature | String | 是    | 签名后的字符串 |
 
 **返回结果**
@@ -22,6 +25,6 @@
 ```
 {
 	"code": 200,
-	"info": "success."
+	"info": "成功"
 }
 ```
