完善文档，方便阅读。

--- a/2.10 提现.md
+++ b/2.10 提现.md
@@ -1,30 +1,51 @@
 ### 提现
 
-/api/v1/withdraw
-
 **描述**：
 
 此接口用来提现
 
+**请求URL：** 
 
-**请求参数**
+- ` https://tradeapi.bb.vip/api/open/v1/balances/withdraw `
 
 
+**请求方式：**
+
+- POST
+
+**Header：**
+```
+Authorization: {{signature}}
+Content-Type: application/json
+```
+
+**Header参数：**
 | 参数名          | 类型     | 是否必须 | 描述   |
 | :----------- | :----- | :--- | :--- |
-| accessKey | String | 是    | AccessKey |
-| coin | String | 是    | 币种 |
+| Authorization | String | 是    | 28位的base64编码 |
+| Content-Type | String | 是 |提交方式|
+
+
+**请求参数**
+| 参数名          | 类型     | 是否必须 | 描述   |
+| :----------- | :----- | :--- | :--- |
+| accesskey | String | 是    | AccessKey |
+| time | number | 是 | 毫秒级时间戳 |
 | address | String | 是    | 提现地址 |
 | safePwd | String | 是    | 安全密码 |
 | meno | String | 是    | 标签 |
 | coin | String | 是    | 币种 |
-| singnature | String | 是    | 签名后的字符串 |
+| amount | number | 是    | 币种 |
+
 
 **返回结果**
-
 ```
 {
 	"code": 200,
 	"info": "成功"
 }
 ```
+
+**特别提醒**
+
+- 签名时，参与签名的参数要先变成全小写。
