--- a/2.2 下单.md
+++ b/2.2 下单.md
@@ -1,7 +1,6 @@
 ### 下单
 
 **描述：**
-
 此接口用来委托下单
 
 **请求URL：** 
@@ -13,13 +12,15 @@
 **Header：**
 
 ```
-Authorization:4ptxZomBV0q4vjFbJT3l7LOeDJo=
+Authorization: {{signature}}
+Content-Type: application/json
 ```
 
 **Header参数：**
 | 参数名          | 类型     | 是否必须 | 描述   |
 | :----------- | :----- | :--- | :--- |
 | Authorization | String | 是    | 28位的base64编码 |
+| Content-Type | String | 是 |提交方式|
 
 **Body请求参数：**
 
@@ -28,7 +29,7 @@ Authorization:4ptxZomBV0q4vjFbJT3l7LOeDJo=
 | accesskey | String | 是    | AccessKey |
 | number | float | 是    | 数量 |
 | market | String | 是    | 市场 |
-| time | long | 是    | 时间戳 |
+| time | number | 是    | 毫秒级时间戳 |
 | price | float | 是    | 价格 |
 | type | int | 是    | 买单0或卖单1 |
 
