--- a/2.5 取消委托单.md
+++ b/2.5 取消委托单.md
@@ -1,10 +1,29 @@
 ### 取消委托
 
-/api/v1/cancel
-
 **描述**：
 
 此接口用来取消委托
+
+**请求URL：** 
+
+- ` https://tradeapi.bb.vip/api/open/v1/orders`
+
+
+**请求方式：**
+
+- DELETE
+
+**Header：**
+```
+Authorization: {{signature}}
+Content-Type: application/json
+```
+
+**Header参数：**
+| 参数名          | 类型     | 是否必须 | 描述   |
+| :----------- | :----- | :--- | :--- |
+| Authorization | String | 是    | 28位的base64编码 |
+| Content-Type | String | 是 |提交方式|
 
 **请求参数**
 
@@ -12,9 +31,10 @@
 | 参数名          | 类型     | 是否必须 | 描述   |
 | :----------- | :----- | :--- | :--- |
 | accessKey | String | 是    | AccessKey |
+| time | number | 是 | 毫秒级时间戳 |
 | market | String | 是    | 市场 |
 | id | long | 是    | 订单ID |
-| singnature | String | 是    | 签名后的字符串 |
+
 
 **返回结果**
 
@@ -24,3 +44,7 @@
 	"info": "success."
 }
 ```
+
+**特别提醒**
+
+- 这里使用的是delete方法。
