--- a/2.1 获取资产信息.md
+++ b/2.1 获取资产信息.md
@@ -13,7 +13,7 @@
 **Header：**
 
 ```
-Authorization:4ptxZomBV0q4vjFbJT3l7LOeDJo=
+Authorization:{{signature}}
 ```
 
 **Header参数：**
@@ -26,7 +26,7 @@ Authorization:4ptxZomBV0q4vjFbJT3l7LOeDJo=
 | 参数名          | 类型     | 是否必须 | 描述   |
 | :----------- | :----- | :--- | :--- |
 | accesskey | String | 是    | AccessKey |
-| time | long | 是    | 毫秒级时间戳 |
+| time | number | 是    | 毫秒级时间戳 |
 
 
 返回结果：**
