--- a/2.3 获取市场单个委托单.md
+++ b/2.3 获取市场单个委托单.md
@@ -1,7 +1,6 @@
 ### 获取委托单
 
 **描述：**
-
 此接口用来获取委托详细信息
 
 **请求URL：** 
@@ -13,7 +12,7 @@
 **Header：**
 
 ```
-Authorization:4ptxZomBV0q4vjFbJT3l7LOeDJo=
+Authorization:{{signature}}
 ```
 
 **Header参数：**
@@ -26,7 +25,8 @@ Authorization:4ptxZomBV0q4vjFbJT3l7LOeDJo=
 
 | 参数名          | 类型     | 是否必须 | 描述   |
 | :----------- | :----- | :--- | :--- |
-| accessKey | String | 是    | AccessKey |
+| accesskey | String | 是    | AccessKey |
+| time | number | 是    | 毫秒级时间戳 |
 | market | String | 是    | 市场 |
 | id | long | 是    | 委托ID |
 
