--- a/2.4 获取市场全部委托单.md
+++ b/2.4 获取市场全部委托单.md
@@ -1,19 +1,34 @@
 ### 获取批量委托单
 
-/api/v1/getOpenOrders
-
 **描述**：
-
 此接口用来获取多个委托信息
 
-**请求参数**
+**请求URL：** 
+- ` https://tradeapi.bb.vip/api/open/v1/orders `
 
+**请求方式：**
+- GET
+
+**Header：**
+
+```
+Authorization:{{signature}}
+```
+
+**Header参数：**
+| 参数名          | 类型     | 是否必须 | 描述   |
+| :----------- | :----- | :--- | :--- |
+| Authorization | String | 是    | 28位的base64编码 |
+
+
+**Query参数：**
 
 | 参数名          | 类型     | 是否必须 | 描述   |
 | :----------- | :----- | :--- | :--- |
-| accessKey | String | 是    | AccessKey |
+| accesskey | String | 是    | AccessKey |
+| time | number | 是    | 毫秒级时间戳 |
 | market | String | 是    | 市场 |
-| singnature | String | 是    | 签名后的字符串 |
+
 
 **返回结果**
 
