--- a/2.9 获取提现记录.md
+++ b/2.9 获取提现记录.md
@@ -1,21 +1,34 @@
 ### 获取提现记录
 
-/api/v1/getPayOutRecord
-
 **描述**：
-
 此接口用来获取提现记录
 
-**请求参数**
+**请求URL：** 
+- ` https://tradeapi.bb.vip/api/open/v1/balances/withdraw `
 
+**请求方式：**
+- GET
 
+**Header：**
+
+```
+Authorization:{{signature}}
+```
+
+**Header参数：**
 | 参数名          | 类型     | 是否必须 | 描述   |
 | :----------- | :----- | :--- | :--- |
-| accessKey | String | 是    | AccessKey |
-| pageIndex | int | 否    | 页数 |
-| pageSize | int | 否    | 条数 |
+| Authorization | String | 是    | 28位的base64编码 |
+
+**Query参数**
+| 参数名          | 类型     | 是否必须 | 描述   |
+| :----------- | :----- | :--- | :--- |
+| accesskey | String | 是    | AccessKey |
+| time | number | 是    | 毫秒级时间戳 |
+| page | number | 否    | 页数 |
+| limit| number | 否    | 条数 |
 | coin | String | 是    | 币种 |
-| singnature | String | 是    | 签名后的字符串 |
+
 
 **返回结果**
 
