--- a/1.4 获取历史成交数据.md
+++ b/1.4 获取历史成交数据.md
@@ -16,7 +16,7 @@
 |参数名|必选|类型|说明|
 |:----    |:---|:----- |-----   |
 |market |  是  |    string   |    市场(目前开放的市场有btc_usdt，eth_usdt，等查看官网公告)   |
-|since  |  否  |    long |  时间戳毫秒级 |
+|since  |  否  |    long |  毫秒级时间戳 |
 
 **返回示例**
 
