--- a/2.2 下单.md
+++ b/2.2 下单.md
@@ -20,16 +20,16 @@ Content-Type: application/json
 | 参数名          | 类型     | 是否必须 | 描述   |
 | :----------- | :----- | :--- | :--- |
 | Authorization | String | 是    | 28位的base64编码 |
-| Content-Type | String | 是 |提交方式|
+| Content-Type | String | 是 |提交方式，使用application/json|
 
 **Body请求参数：**
 
 | 参数名          | 类型     | 是否必须 | 描述   |
 | :----------- | :----- | :--- | :--- |
 | accesskey | String | 是    | AccessKey |
+| time | number | 是    | 毫秒级时间戳 |
 | number | float | 是    | 数量 |
 | market | String | 是    | 市场 |
-| time | number | 是    | 毫秒级时间戳 |
 | price | float | 是    | 价格 |
 | type | int | 是    | 买单0或卖单1 |
 
