--- a/2.6 获取充值地址.md
+++ b/2.6 获取充值地址.md
@@ -1,21 +1,33 @@
 ### 获取充值地址
 
-/api/v1/getPayInAddress
-
 **描述**：
-
 此接口用来获取充值地址
 
-**请求参数**
+**请求URL：** 
+- ` https://tradeapi.bb.vip/api/open/v1/balances/recharge/address `
 
+**请求方式：**
+- GET
 
+**Header：**
+
+```
+Authorization:{{signature}}
+```
+
+**Header参数：**
 | 参数名          | 类型     | 是否必须 | 描述   |
 | :----------- | :----- | :--- | :--- |
-| accessKey | String | 是    | AccessKey |
-| pageIndex | int | 否    | 页数 |
-| pageSize | int | 否    | 条数 |
+| Authorization | String | 是    | 28位的base64编码 |
+
+**Query参数**
+| 参数名          | 类型     | 是否必须 | 描述   |
+| :----------- | :----- | :--- | :--- |
+| accesskey | String | 是    | AccessKey |
+| time | number | 是    | 毫秒级时间戳 |
+| page | number | 否    | 页数 |
+| limit| number | 否    | 条数 |
 | coin | String | 是    | 币种 |
-| singnature | String | 是    | 签名后的字符串 |
 
 **返回结果**
 
@@ -23,7 +35,13 @@
 {
 	"code": 200,
 	"data": {
-		"record": []
+		"record": [
+			{
+                "address": "2Mu8671yW8Lh****FDK8vCoSAXcDWjLN2nv",
+                "coin": "btc",
+				"memo": "ancon"
+            }
+		]
 	},
 	"info": "成功"
 }
@@ -34,5 +52,5 @@
 | 参数名          | 类型   | 描述   |
 | :----------- |  :--- | :--- |
 | address | String     | 充值地址 |
-| memo | String     | 标签 |
 | coin | String     | 币种 |
+| memo | String     | 标签 |
