很奇怪，排版应该都是没问题的，但是GitHub显示有问题

--- a/2.5 取消委托单.md
+++ b/2.5 取消委托单.md
@@ -20,10 +20,11 @@ Content-Type: application/json
 ```
 
 **Header参数：**
+
 | 参数名          | 类型     | 是否必须 | 描述   |
 | :----------- | :----- | :--- | :--- |
 | Authorization | String | 是    | 28位的base64编码 |
-| Content-Type | String | 是 |提交方式|
+| Content-Type | String | 是 |提交方式，使用application/json|
 
 **请求参数**
 
