--- a/2.9 获取提现记录.md
+++ b/2.9 获取提现记录.md
@@ -22,7 +22,8 @@ Authorization:{{signature}}
 | Authorization | String | 是    | 28位的base64编码 |
 
 
-**Query参数**
+**Query参数：**
+
 | 参数名          | 类型     | 是否必须 | 描述   |
 | :----------- | :----- | :--- | :--- |
 | accesskey | String | 是    | AccessKey |
