--- a/2.10 提现.md
+++ b/2.10 提现.md
@@ -27,7 +27,8 @@ Content-Type: application/json
 | Content-Type | String | 是 |提交方式，使用application/json|
 
 
-**请求参数**
+**请求参数：**
+
 | 参数名          | 类型     | 是否必须 | 描述   |
 | :----------- | :----- | :--- | :--- |
 | accesskey | String | 是    | AccessKey |
