--- a/2.4 获取市场全部委托单.md
+++ b/2.4 获取市场全部委托单.md
@@ -28,6 +28,8 @@ Authorization:{{signature}}
 | accesskey | String | 是    | AccessKey |
 | time | number | 是    | 毫秒级时间戳 |
 | market | String | 是    | 市场 |
+| page | number | 否    | 页数 |
+| limit| number | 否    | 条数 |
 
 
 **返回结果**
