添加一个成交委托单查询

--- a/2.4 获取市场全部委托单.md
+++ b/2.4 获取市场全部委托单.md
@@ -30,6 +30,7 @@ Authorization:{{signature}}
 | market | String | 是    | 市场 |
 | page | number | 否    | 页数 |
 | limit| number | 否    | 条数 |
+| status | number | 否 | 1为已成交委托单，0为其他|
 
 
 **返回结果**
