--- a/2.2 下单.md
+++ b/2.2 下单.md
@@ -33,7 +33,7 @@ Content-Type: application/json
 | number | float | 是    | 数量 |
 | market | String | 是    | 市场 |
 | price | float | 是    | 价格 |
-| type | int | 是    | 买单0或卖单1 |
+| type | int | 是    | 1是买单 或者 0是卖单 |
 
 **返回结果：**
 
