--- a/2.5 取消委托单.md
+++ b/2.5 取消委托单.md
@@ -31,7 +31,7 @@ Content-Type: application/json
 
 | 参数名          | 类型     | 是否必须 | 描述   |
 | :----------- | :----- | :--- | :--- |
-| accessKey | String | 是    | AccessKey |
+| accesskey | String | 是    | AccessKey |
 | time | number | 是 | 毫秒级时间戳 |
 | market | String | 是    | 市场 |
 | id | long | 是    | 订单ID |
